--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 /* Google font here */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Merriweather:wght@300;400;700;900&display=swap');
 
+/* container */
+.container {
+    width: 1100px;
+    margin: 0 auto;
+}
+
 /* Banner section start here */
 .banner {
     width: 1100px;
@@ -14,14 +20,13 @@
 }
 
 .banner_shadow {
-    width: 1100px;
     height: 600px;
     background: linear-gradient(180deg, #070211 1%, rgba(7, 10, 17, 0.00) 100%);
-    margin: 0 auto;
     border-radius: 16px;
     margin-top: 30px;
     position: relative;
 }
+
 .banner_text {
     position: absolute;
     top: 50%;
@@ -33,21 +38,22 @@
     line-height: 25px;
 
 }
+
 .banner_text p {
     font-size: 32px;
     font-weight: 400;
 }
+
 .banner_text h2 {
     font-size: 72px;
     font-weight: 900;
 }
+
 /* Banner section end here */
 
 /* off section start here  */
 
-.off{
-    width: 1100px;
-    margin: 0 auto;
+.off {
     margin-top: 80px;
     display: flex;
     flex-direction: column;
@@ -57,45 +63,49 @@
     font-family: "Inte";
     margin-bottom: 120px;
 }
+
 .off h1 {
     font-size: 75px;
     font-weight: 709000;
     color: #F00;
 
 }
+
 .off p {
     font-size: 20px;
     font-weight: 500;
     color: #F00;
-    
-    
+
+
 }
+
 .off h2 {
     font-size: 37px;
     font-weight: 900;
     color: #070211;
     margin-top: -5px;
-    
+
 }
 
 /* off section end here  */
 
 /* welcome section start here  */
-.welcome{
-    width: 1100px;
+.welcome {
     background-image: url("resource/Vectorrr.png");
     background-repeat: no-repeat;
     background-size: contain;
-    margin: 0 auto;
+
 
 }
-.welcome-shadow{
+
+.welcome-shadow {
     width: 1100px;
     height: 500px;
-    background-image: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);  
-    
+    background-image: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
+
 }
-.welcome-contant{
+
+.welcome-contant {
     width: 1100px;
     color: white;
     display: flex;
@@ -105,36 +115,140 @@
     padding-top: 100px;
     padding-left: 50px;
 }
-.welcome-text{
+
+.welcome-text {
     width: 60%;
     color: #FFF;
-    
-    
+
+
 }
-.welcome-text h2{
+
+.welcome-text h2 {
     font-family: "Merriweather";
     font-size: 60px;
     font-weight: 900;
 
 }
-.welcome-text p{
+
+.welcome-text p {
     font-size: 17px;
     font-weight: 400;
     font-family: "Inter";
 
 }
-.welcome-text button{
+
+.welcome-text button {
     color: purple;
     font-size: 20px;
     font-weight: 800;
-    font-family: "Inter";  
+    font-family: "Inter";
     padding: 5px;
     border-radius: 8px;
 }
-.welcome-img{
+
+.welcome-img {
     width: 30%;
 }
 
+/* welcome section end here  */
+
+/* Place section start here  */
+.place-section {
+    height: 400px;
+    background-image: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+    margin: 40px auto;
+    text-align: center;
+    padding-top: 100px;
+}
+
+.place-section h3 {
+    font-size: 30px;
+    color: #070211;
+    font-family: "Inter";
+    font-weight: 600;
+}
+
+.spn {
+    color: #F00;
+}
+
+.place-section button {
+    background: #F00;
+    font-family: "Inter";
+    font-size: 20px;
+    font-weight: 700;
+    color: #FFF;
+    border: none;
+    padding: 15px;
+    border-radius: 10px;
+}
+
+/* Place section end here  */
+
+/* coming section start here  */
+.coming-sec {
+    height: 330px;
+    background: #FFF;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    
+}
+
+.coming-1 {
+    width: 34%;
+}
+ .coming-3 {
+    width: 32%;
+    padding-left: 8%;
+}
+.coming-img{
+    width: 330px;
+    margin-left: 20px;
+    border:6px solid #F00;
+    border-radius: 50%;
+    padding: 15px;
+
+}
 
 
+.coming-1 h5 {
+    font-size: 25px;
+    color: #F00;
+    font-family: "Inter";
+    font-weight: 500px;
+}
 
+.coming-1 h3 {
+    color: #070211;
+    font-family: "Merriweather";
+    font-size: 48px;
+    font-weight: 900;
+}
+
+.coming-1 p {
+    color: rgba(7, 2, 17, 0.60);
+    font-family: "Inter";
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.coming-3 h3{
+    color: #F00;
+    font-family: "Inter";
+    font-size: 45px;
+    font-weight: 700;
+
+
+}
+
+.coming-3 p{
+    color: rgba(7, 2, 17, 0.60);
+    font-family: "Inter";
+    font-size: 20px;
+    font-weight: 400;
+}
+
+
+/* coming section end here  */
