--- a/style.css
+++ b/style.css
@@ -193,20 +193,22 @@
     justify-content: space-between;
     align-items: center;
     gap: 10px;
-    
+
 }
 
 .coming-1 {
     width: 34%;
 }
- .coming-3 {
+
+.coming-3 {
     width: 32%;
     padding-left: 8%;
 }
-.coming-img{
+
+.coming-img {
     width: 330px;
     margin-left: 20px;
-    border:6px solid #F00;
+    border: 6px solid #F00;
     border-radius: 50%;
     padding: 15px;
 
@@ -234,7 +236,7 @@
     font-weight: 400;
 }
 
-.coming-3 h3{
+.coming-3 h3 {
     color: #F00;
     font-family: "Inter";
     font-size: 45px;
@@ -243,7 +245,7 @@
 
 }
 
-.coming-3 p{
+.coming-3 p {
     color: rgba(7, 2, 17, 0.60);
     font-family: "Inter";
     font-size: 20px;
@@ -252,3 +254,80 @@
 
 
 /* coming section end here  */
+
+/* holiday section start here  */
+.holi-1 {
+    padding-top: 150px;
+    height: 300px;;
+    text-align: center;
+}
+
+.holi-1 h6 {
+    color: #070211;
+    font-family: "Inter";
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: -1px;
+}
+
+.holi-1 h1 {
+    color: #F00;
+    text-align: center;
+    font-family: "Merriweather";
+    font-size: 72px;
+    font-weight: 900;
+    margin-top: 9px;
+}
+.spn-1{
+    color: #070211;
+    text-align: center;
+    font-family: "Merriweather";
+    font-size: 72px;
+    font-weight: 900;
+}
+
+.holi-1 p {
+    color: rgba(7, 2, 17, 0.60);
+    text-align: center;
+    font-family: "Inter";
+    font-size: 20px;
+    font-weight: 500;
+    padding-left: -5px;
+    margin-top: -40px;
+}
+
+.holi-2 {
+    display: flex;
+    justify-content: space-between;
+    
+}
+.holi-2-1{
+    width: 550px;
+    height: 434px;
+}
+
+.holi-2-2{
+    position: relative;
+}
+.offer-pic{
+    position: absolute;
+    top: 95px;
+    right: 271px;
+}
+.Rectangle img{
+    width: 1100px;
+    
+}
+.holi-3{
+    position: relative;
+}
+.flower{
+    position: absolute;
+    top: -390px;
+    
+}
+
+
+
+
+/* holiday section end here  */
