--- a/style.css
+++ b/style.css
@@ -258,7 +258,8 @@
 /* holiday section start here  */
 .holi-1 {
     padding-top: 150px;
-    height: 300px;;
+    height: 300px;
+    ;
     text-align: center;
 }
 
@@ -278,7 +279,8 @@
     font-weight: 900;
     margin-top: 9px;
 }
-.spn-1{
+
+.spn-1 {
     color: #070211;
     text-align: center;
     font-family: "Merriweather";
@@ -299,35 +301,98 @@
 .holi-2 {
     display: flex;
     justify-content: space-between;
-    
+
 }
-.holi-2-1{
+
+.holi-2-1 {
     width: 550px;
     height: 434px;
 }
 
-.holi-2-2{
+.holi-2-2 {
     position: relative;
 }
-.offer-pic{
+
+.offer-pic {
     position: absolute;
     top: 95px;
     right: 271px;
 }
-.Rectangle img{
+
+.Rectangle img {
     width: 1100px;
-    
+
 }
-.holi-3{
+
+.holi-3 {
     position: relative;
 }
-.flower{
+
+.flower {
     position: absolute;
     top: -390px;
-    
+
 }
 
-
-
-
 /* holiday section end here  */
+
+/* portfolio section start here  */
+.portfolio-text {
+    width: 1100px;
+    line-height: 10px;
+}
+
+.portfolio-text h5 {
+    color: #F00;
+    font-family: "Inter";
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: -10px;
+
+}
+
+.portfolio-text h3 {
+    color: #070211;
+    font-family: "Merriweather";
+    font-size: 48px;
+    font-weight: 900;
+    text-transform: capitalize;
+}
+
+.portfolio-text p {
+    color: rgba(7, 2, 17, 0.60);
+    font-family: "Inter";
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.portfolio-img {
+    margin-top: 53px;
+    margin-right: 20px;
+
+}
+
+.portfolio-col-1 {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+
+}
+
+.portfolio-col-1 div {
+    width: 320px;
+    height: 320px;
+
+}
+
+.portfolio-col-2 {
+    display: flex;
+    justify-content: space-between;
+}
+
+.portfolio-col-2 div {
+    width: 320px;
+    height: 320px;
+}
+
+/* portfolio section end here  */
